[gd_scene load_steps=6 format=2]

[ext_resource path="res://gui/fonts/regular.tres" type="DynamicFont" id=1]
[ext_resource path="res://gui/fonts/italics.tres" type="DynamicFont" id=2]
[ext_resource path="res://gui/fonts/bold.tres" type="DynamicFont" id=3]
[ext_resource path="res://textures/pictures/Warlock.png" type="Texture" id=4]
[ext_resource path="res://scenes/CardVIew.gd" type="Script" id=5]

[node name="CardVIew" type="PanelContainer"]
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -130.0
margin_bottom = 130.0
rect_min_size = Vector2( 200, 0 )
size_flags_vertical = 0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 193.0
margin_bottom = 253.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 186.0
margin_bottom = 20.0

[node name="PowerCost" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_right = 8.0
margin_bottom = 20.0
text = "3"
align = 1

[node name="CardName" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 12.0
margin_right = 182.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Lesser Abyssal"
align = 1

[node name="ElementLvlContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 186.0
margin_right = 186.0
margin_bottom = 20.0

[node name="Picture" type="TextureRect" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 186.0
margin_bottom = 124.0
rect_min_size = Vector2( 0, 100 )
texture = ExtResource( 4 )
stretch_mode = 6

[node name="Description" type="RichTextLabel" parent="VBoxContainer"]
margin_top = 128.0
margin_right = 186.0
margin_bottom = 222.0
size_flags_vertical = 3
custom_fonts/italics_font = ExtResource( 2 )
custom_fonts/bold_font = ExtResource( 3 )
custom_fonts/normal_font = ExtResource( 1 )
bbcode_enabled = true
bbcode_text = "[b]On Play:[/b] gain 3 power.

[i]lorem ipsum[/i]"
text = "On Play: gain 3 power.

lorem ipsum"

[node name="EntityStats" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 226.0
margin_right = 186.0
margin_bottom = 246.0

[node name="Attack" type="Label" parent="VBoxContainer/EntityStats"]
margin_right = 57.0
margin_bottom = 20.0
text = "Attack: 2"
align = 1

[node name="Filler" type="Label" parent="VBoxContainer/EntityStats"]
margin_left = 61.0
margin_right = 142.0
margin_bottom = 20.0
size_flags_horizontal = 3
align = 1

[node name="Life" type="Label" parent="VBoxContainer/EntityStats"]
margin_left = 146.0
margin_right = 186.0
margin_bottom = 20.0
text = "Life: 2"
align = 1
